--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -1,7 +1,42 @@
 <!-- body bala logic yha pr hoga -->
 <% layout('layouts/boilerplate')%>  <!--yha layouts k boiler plate ko use kiya h-->
 <%- include('../partials/navbar') %>  <!--navbar ko add krne k liye-->
-
+<style>
+   body{
+      background-color: rgb(46, 116, 176);
+      background-image: url("https://images.unsplash.com/photo-1713646195420-b92887a4b570?q=80&w=1002&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+      background-size: cover;
+            background-position: center center;
+    }
+    .col-6{
+            position: relative;
+            max-width: 600px;
+            padding: 16px;
+            margin-top: 25px;
+            background: rgba(168, 195, 202, 0.325);
+            border-radius: 15px;
+          
+    }
+    #darea{
+      box-sizing: content-box;
+      margin-top: 8px;
+    }
+    .mb-3{
+      box-sizing: content-box;
+      padding:5px;
+      color: rgb(250, 245, 207);
+    }
+    .btn-2{
+      background-color: rgb(236, 161, 12);
+      font-weight: bold;
+      width: 100%;
+      height: 40px; 
+      border-radius:25px ;
+    }
+    .btn-2:hover{
+      background-color: rgb(46, 185, 46);
+    }
+</style>
 <div class="row">
     <div class="col-6 mx-auto">
 
@@ -48,7 +83,7 @@
                     Please enter the Description field.
                   </div>
             </div>
-            <button class="btn btn-sm btn-success" type="submit">Add Product</button>
+            <button class="btn-2 btn-sm btn-success" type="submit">Add Product</button>
 
 
         </form>
